--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   "dependencies": {
     "react": "16.4.1",
     "react-native": "^0.56.0",
+    "react-native-easy-grid": "^0.2.0",
     "react-redux": "^5.0.7",
     "reactotron-react-native": "^2.0.0",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0",
     "redux-persist": "^5.10.0",
+    "redux-thunk": "^2.3.0",
     "reselect": "^3.0.1"
   },
   "devDependencies": {
