--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "lodash": "^4.17.10",
     "react": "16.4.1",
     "react-native": "^0.56.0",
     "react-native-easy-grid": "^0.2.0",
