--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react": "16.4.1",
     "react-native": "^0.56.0",
     "react-native-easy-grid": "^0.2.0",
+    "react-native-elements": "^0.19.1",
+    "react-native-vector-icons": "^5.0.0",
     "react-redux": "^5.0.7",
     "reactotron-react-native": "^2.0.0",
     "redux": "^4.0.0",
