master - Made some changes for firing it though Expo. Do not work yet.

--- a/app.json
+++ b/app.json
@@ -1,4 +1,7 @@
 {
-  "name": "TodoList_2",
-  "displayName": "TodoList_2"
+  "expo": {
+    "name": "TodoList_2",
+    "slug": "todo-list_2",
+    "sdkVersion": "29.0.0"
+  }
 }
